* maxiPago: Send currency with request [curiousepic]
* Credorax: Map order_id to field H9 [curiousepic]
* Authorize.net: Remove duplicate country GB [shasum]
* PayU Latam: Add processWithoutCvv2 field [shasum]
* Fat Zebra: De-nest soft descriptor fields [curiousepic]
* Credorax: Only pass c5 field for billing address1 [davidsantoso]
* Orbital: Add support for CLP currency [curiousepic]

== Version 1.61.0 (November 7, 2016)
* Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
* AuthorizeNet: Update supported countries list [shasum]
* Barclay SmartPay: Add support for credit [shasum]
* Barclaycard SmartPay: Update supported countries [shasum]
* BluePay: Add Canada to supported countries list [shasum]
* BlueSnap: Update countries list [shasum]
* Braintree Blue: Add Android Pay support [mrezentes]
* Braintree Blue: Add remote test to verify card token [shasum]
* Braintree Blue: Get Android Pay tx id from payment method, not options [mrezentes]
* CardStream: Add MXN currency code [curiousepic]
* CardStream: Set captureDelay to zero on purchase [davidsantoso]
* CitrusPay: Add gateway [duff]
* CitrusPay: Update URL to current API version [davidsantoso]
* Clearhaus: Fix refund of captures [duff]
* Clearhaus: Update list of non fractal currencies [curiousepic]
* Clearhaus: Use localized amount [curiouspic]
* Conekta: Add void action [MauricioMurga]
* Credorax: Add gateway support [davidsantoso]
* CyberSource, Paymill, Payflow: Add verify_credentials [duff]
* CyberSource: Combine auth_reversal with Void [curiousepic]
* CyberSource: Increase merchant defined data fields [davidsantoso]
* CyberSource: Look up alpha2 country code [curiousepic]
* CyberSource: Use localized_amount [curiousepic]
* Element: Pass order_id and shipping address [curiousepic]
* Fat Zebra: Add cavv, xid, and sli fields [curiousepic]
* Fat Zebra: Fix improper descriptor nesting [curiousepic]
* Find countries if they are differently cased [curiousepic]